--- a/rwd2.html
+++ b/rwd2.html
@@ -8,9 +8,9 @@
 		
 		<meta charset="UTF-8">
 		<meta name="description" content="Free Web tutorials">
-		<meta name="keywords" content="HTML, CSS, JavaScript">
-		<meta name="author" content="John Doe">
-		<meta http-equiv="refresh" content="">
+		<meta name="keywords" content="HTML, CSS">
+		<meta name="author" content="Zaheer Hassan Khan">
+		<meta http-equiv="refresh" content="300">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<script src="https://kit.fontawesome.com/30e3927ceb.js" crossorigin="anonymous"></script>
