Update and rename rwd2.html to welcome.html

--- a/welcome.html
+++ b/welcome.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>RWD2</title>
 		
-		<link href="rwd2.css" type="text/css" rel="stylesheet">
+		<link href="welcome.css" type="text/css" rel="stylesheet">
 		
 		<link href="https://image.flaticon.com/icons/png/512/3781/3781655.png" type="image" rel="shortcut icon">
 		
